tests/functional2/lang/bad_string_interpolation/eval-fail-1.err.exp
error:
       … while evaluating a path segment
         at /pwd/in.nix:1:2:
            1| "${x: x}"
             |  ^
            2|

       error: cannot coerce a function to a string: «lambda @ /pwd/in.nix:1:4»
